Fixing tooltip on iphone.

--- a/website/public/css/custom.css
+++ b/website/public/css/custom.css
@@ -59,7 +59,7 @@ x.axis {
         font-size: 13px;
     }
 }
-.d3-tip {
+.d3-tip ,.tooltip {
   line-height: 1;
   font-weight: bold;
   font-size:12px;
